--- a/.github/workflows/build-padavan.yml
+++ b/.github/workflows/build-padavan.yml
@@ -7,8 +7,8 @@ on:
   push:
     tags:
     - 'v*'
-  #  branches: 
-  #    - master
+    branches: 
+      - master
 #  schedule:
 #    - cron: 0 8 * * 5
   watch:
@@ -117,8 +117,8 @@ jobs:
         #########################################################################################
         #自定义添加其它功能请参考源码configs/templates/目录下的config文件。按照上面的格式添加即可
         #格式如下：
-        #sed -i '/CONFIG_FIRMWARE_INCLUDE_ARIA2/d' .config
-        #echo "CONFIG_FIRMWARE_INCLUDE_ARIA2=y" >> .config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_ARIA2/d' .config
+        echo "CONFIG_FIRMWARE_INCLUDE_ARIA2=y" >> .config
         #########################################################################################
         sudo ./clear_tree
         sudo ./build_firmware_modify $TNAME 0
